Testing for listCPI
