# packages/cactus-plugin-ledger-connector-corda/src/main/json/openapi.json
@@ -1446,15 +1446,15 @@
         }
       }
     },
-    "/api/v1/cpi": {
+    "/api/v1/plugins/@hyperledger/cactus-plugin-ledger-connector-corda/listCPI": {
       "get": {
           "x-hyperledger-cactus": {
               "https": {
                   "verbLowerCase": "get",
-                  "path": "/api/v1/cpi"
+                  "path": "/api/v1/plugins/@hyperledger/cactus-plugin-ledger-connector-corda/listCPI"
               }
           },
-          "operationId": "getCPIResponse",
+          "operationId": "listCPIV1",
           "summary": "List all CPIs uploaded to the cluster",
           "responses": {
               "200": {
@@ -1470,12 +1470,12 @@
           }
       }
   },
-  "/api/v1/flow/{holdingIDShortHash}": {
+  "/api/v1/plugins/@hyperledger/cactus-plugin-ledger-connector-corda/flow/{holdingIDShortHash}": {
       "get": {
           "x-hyperledger-cactus": {
               "http": {
                   "verbLowerCase": "get",
-                  "path": "/api/v1/flow/{holdingIDShortHash}"
+                  "path": "/api/v1/plugins/@hyperledger/cactus-plugin-ledger-connector-corda/flow/{holdingIDShortHash}"
               }
           },
           "operationId": "flowStatusResponses",
@@ -1514,7 +1514,7 @@
           "x-hyperledger-cactus": {
               "http": {
                   "verbLowerCase": "post",
-                  "path": "/api/v1/flow/{holdingIDShortHash}"
+                  "path": "/api/v1/plugins/@hyperledger/cactus-plugin-ledger-connector-corda/flow/{holdingIDShortHash}"
               }
           },
           "operationId": "startFlowParameters",
@@ -1555,12 +1555,12 @@
           }
       }
   },
-  "/api/v1/flow/{holdingIDShortHash}/{clientRequestID}": {
+  "/api/v1/plugins/@hyperledger/cactus-plugin-ledger-connector-corda/flow/{holdingIDShortHash}/{clientRequestID}": {
       "get": {
           "x-hyperledger-cactus": {
               "http": {
                   "verbLowerCase": "get",
-                  "path": "/api/v1/flow/{holdingIDShortHash}/{clientRequestID}"
+                  "path": "/api/v1/plugins/@hyperledger/cactus-plugin-ledger-connector-corda/flow/{holdingIDShortHash}/{clientRequestID}"
               }
           },
           "operationId": "flowStatusResponse",
